devel
-----

* Fix BTS-2213: Adds a retry logic to the UserManager::updateUser to retry in certain situations 
  (e.g. DB/Col create) until it succeeds instead of giving up after some _rev conflicts.

* Fix fuzzer tests. Actually look at `Connection: Close` HTTP header and
  do not expect the connection to stay open if we see this. This fixes
  BTS-2185.

* Fix BTS-2220: Fix failing autoupgrade of databases in cluster mode.
  This was caused by key generation now using the cluster key
  generator on dbservers, which fails during upgrade with a message that
  the database was shutting down.

* Fix BTS-2219: Fix possible crashes with the log id [80e0e] and corresponding
  message
  "thread '<thread name>' is not stopped but created. shutting down hard".

* Fix BTS-2217: If an error happens during startup, a disabled feature can
  lead to a crash. Additionally signal that the server is stopping during
  the unexpected shutdown so that in particular the RocksDBSyncThread does
  not crash with an assertion failure.

* Fix BTS-2212: Fix a hang on singleserver upgrades. Some of the Upgrade tasks needed 
  the UserManager to function properly.

* Fix BTS-2178: If the URL in an HTTP request is bad, the server will
  now not simply close the connection but give a proper response.

* Fix unique _key generation in two cases: AQL INSERT operations in a loop
  without user specified _key in collections with exactly one shard or with
  multiple shard, non-standard sharding and `forceOneShardAttributeValue`.

* Fix BTS-1732 and BTS-2177: Possible crashes during shutdown, and maintainer
  mode (i.e. non-production) assertions during tests.

* Add a separate thread to the UserManager to handle the load of the user-cache asynchronously.
  This pre-loads the user-cache as fast as possible (as soon as the global version changes)
  Also, compared to the old version, this allows the read-only operation to work on the user-cache 